namespaces/discord/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: discord
  name: discord-bots-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - discord-bots.darbia.dev
      secretName: discord-bots-tls
  rules:
    - host: discord-bots.darbia.dev
      http:
        paths:
          - path: /stryder
            pathType: Prefix
            backend:
              service:
                name: stryder
                port:
                  number: 5000
